<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download Now</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="file_name_title">File name:</string>
    <string name="status_title">Status:</string>
    <string name="status">Success</string>

    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android by Square, Inc.</string>
    <string name="project_text">LoadApp - Current repository by Udacity</string>
    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="go_back">Go Back</string>

    <string name="no_choice_toast">Please select a file to download</string>

    <string name="notification_channel_name">downloading_app_repos</string>
    <string name="notification_channel_id">downloading_app_repos_id</string>
</resources>
