<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#27ae60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/download_icon"
        app:layout_constraintEnd_toEndOf="@id/myRectangleView"
        app:layout_constraintStart_toStartOf="@id/myRectangleView"
        app:layout_constraintTop_toTopOf="@id/myRectangleView"
        app:layout_constraintBottom_toBottomOf="@id/myRectangleView"
        app:srcCompat="@drawable/download"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/myRectangleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/project_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_text"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/glide_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glide_text"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/retrofit_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_text"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"/>
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:LoadingButton_bgColor="@color/colorAccent"
        app:LoadingButton_progressColor="@color/progressColor"
        app:LoadingButton_txtColor="@color/textColor"
        app:LoadingButton_indicatorColor="@color/white"
        app:LoadingButton_buttonText="@string/button_name"
        app:LoadingButton_loadingText="@string/button_loading"
        app:LoadingButton_textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>